新增首页头图管理
